# burst-rminer

./: Cargo.toml  README.md  build.rs  config.json
plots/: 15250033402865692318_0_8_2  15250033402865692318_8_8_2
src/: config.rs  constants.rs  long_time.rs  main.rs  miner.rs  plots.rs  pool.rs  sph_shabal.rs
